Version 4.7

2017-02-22 4.7.85

* IMPROVEMENT: Check, if given hash could be added to the BlockSigner without exceeding given tree height. BlockSigner interface changed, add method returns boolean instead of KsiBlockSigner.
* BUGFIX: Fixed KsiBlockSigner initialization without default hash algorithm.
* IMPROVEMENT: Updated signature verification procedure. Added new error codes.
* IMPROVEMENT: X509CertificateSubjectRdnSelector supports certificates with multi-valued RDN-s

Version 4.6

2016-12-15 4.6.80

* IMPROVEMENT: Now the Identity information is provided as an array in SDK. Old methods are deprecated. Moved class com.guardtime.ksi.unsiganture.IdentityMetadata to package com.guardtime.ksi.blocksigner.
* IMPROVEMENT: KsiBlockSigner performance improvements
* FEATURE: Removed multi-signature support

Version 4.5

2016-11-17 4.5.72

* IMPROVEMENT: HashTreeBuilder optimizations

2016-11-10 4.5.71

* FEATURE: Added a PDU v2 implementation.
* IMPROVEMENT: Replaced com.guardtime.ksi.service package in module ksi-api with com.guardtime.ksi.pdu package in ksi-service-client module.
* IMPROVEMENT: Added a KsiBlockSignerBuilder class. It is recommended to use this builder to create new instances of KsiBlockSigner.
* IMPROVEMENT: Improved RFC3161Record verification.
* IMPROVEMENT: Minor improvements.

Version 4.4

2016-10-10 4.4.67

* IMPROVEMENT: Now internal verification of the signature is performed in the following cases: new signature is created, existing signature is extended, signature is read from input stream.
* IMPROVEMENT: SHA1 hash algorithm status was changed from NOT_TRUSTED to NORMAL
* IMPROVEMENT: Improved user provided publication based verification policy
* BUGFIX: Fixed a typo in CAL-04 verification error text
* IMPROVEMENT: Replaced checked exceptions with runtime exception in DataHasher/DataHash/HashAlgorithm classes. 
* IMPROVEMENT: Method HashAlgorithm.getNamesList() was removed. Added a method with name HashAlgorithm.getImplementedHashAlgorithms()
